syntax = "proto3";
option csharp_namespace = "Common.Protobuf";

option java_package = "catgirl.kirara.moe";

import "MotionInfo.proto";

// Name: DNFJKJBPHLE
message EntityMoveInfo {
    uint32 entity_id = 1;
    MotionInfo motion_info = 2;
    uint32 scene_time = 3;
    uint32 reliable_seq = 4;
    bool is_reliable = 5;
}

